fix router url
