# public/openapi.json
@@ -7,7 +7,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8000/api/v1",
+            "url": "http://localhost:3000/api/v1",
             "description": "Servidor local"
         }
     ],
@@ -136,10 +136,6 @@
                 "title": "Tool",
                 "description": "Modelo de uma ferramenta",
                 "properties": {
-                    "id": {
-                        "type": "integer",
-                        "example": 1
-                    },
                     "title": {
                         "type": "string",
                         "example": "Nova ferramenta"
